# ChangeLog for genkernel
# Copyright: 
# - 2003-2008 Gentoo Foundation
# - 2008-2011 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  20 Jan 2011; Sebastian Pipping <sping@gentoo.org> ChangeLog:
  Add proper mdadm support (bug #282100)

  Special thanks:
  - Laurent Pinchart (mdmon/IMSM support)
  - Matthias Dahl (Initial patch)

  20 Jan 2011; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump version to 3.4.11.1

  20 Jan 2011; Sebastian Pipping <sping@gentoo.org> gen_configkernel.sh:
  Move application of kernel config after "make mrproper" as that deletes
  .config (whereas "make clean" does not) (bug #351906)

  Special thanks:
  - Xake

  20 Jan 2011; Sebastian Pipping <sping@gentoo.org>
  patches/busybox/1.18.1/1.18.1-mdstart.diff:
  busybox 1.18.1: Return of mdstart as an applet (regression) (bug #351909)

  16 Jan 2011; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump version to 3.4.11

  16 Jan 2011; Sebastian Pipping <sping@gentoo.org> defaults/initrd.scripts:
  Do not sleep after vgscan (bug #351047)

  16 Jan 2011; Sebastian Pipping <sping@gentoo.org> ChangeLog:
  Changes:
  - Fix compilation of LVM 2.02.74 (and 2.02.28) (bug #255196, bug #267383)
  - Add minimal btrfs support (bug #303529)
  - Add support for UUID to crypt_root (bug #315467)
  - Run "make firmware_install" if CONFIG_FIRMWARE_IN_KERNEL != y (bug #244651)
  - Port busybox patches from 1.7.4 to 1.18.1 (bug #331971)
  - Handle missing kernel .config better (bug #271528)
  - Improve slowusb handling (bug #323317)
  - Add GnuPG 1.x support (bug #217959)
  - Check return codes of cpio (bug #246370)
  - Update e2fsprogs/blkid to 1.41.14 (bug #291822)
  - Create /bin/vg* symlinks when called as /linuxrc, too (bug #307855)
  - Pick first device when several devices are matching real_root (bug #303531)
  - Fix warning "cannot remove `/var/cache/genkernel/src'" (bug #347213)
  - Allow configuring the list of busybox applets (bug #326593)