@@ -5,6 +5,10 @@
 # Distributed under the GPL v2
 # $Id$
 
+  21 Jan 2011; Sebastian Pipping <sping@gentoo.org> gen_determineargs.sh:
+  Do not query generated files (like include/config/kernel.release) for kernel
+  version, as they may be out of sync (bug #263927)
+
   20 Jan 2011; Sebastian Pipping <sping@gentoo.org> ChangeLog:
   Add proper mdadm support (bug #282100)
 
